--- a/lab_b/nginx.conf
+++ b/lab_b/nginx.conf
@@ -6,16 +6,13 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
-    # Redirect HTTP to HTTPS
     server {
         listen 80;
         server_name localhost;
 
-        # Redirect all HTTP traffic to HTTPS
         return 301 https://$host$request_uri;
     }
 
-    # HTTPS Server
     server {
         listen 443 ssl;
         server_name localhost;
@@ -24,7 +21,7 @@ http {
         ssl_certificate /etc/nginx/ssl/cert.pem;
         ssl_certificate_key /etc/nginx/ssl/key.pem;
 
-        # Modern SSL/TLS Configuration
+        # SSL/TLS Configuration
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
         ssl_prefer_server_ciphers off;
@@ -40,7 +37,6 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-XSS-Protection "1; mode=block" always;
 
-        # Document Root
         root /usr/share/nginx/html;
         index index.html;
 
